<resources>
    <string name="app_name">Resume</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="edit_basic_info">Edit basic info</string>

    <string name="section_education">EDUCATION</string>
    <string name="section_experience">EXPERIENCE</string>
    <string name="section_projects">PROJECTS</string>

    <string name="user_picture">User picture</string>
    <string name="choose_user_picture">Choose user picture</string>

    <string name="basic_info_edit_email_hint">Your email</string>
    <string name="basic_info_edit_name_hint">Your name</string>

    <string name="add_education">Add education</string>
    <string name="add_experience">Add experience</string>
    <string name="add_project">Add project</string>

    <string name="edit_education">Edit education</string>
    <string name="edit_experience">Edit experience</string>
    <string name="edit_project">Edit project</string>

    <string name="start_date">Start date (MM/yyyy)</string>
    <string name="end_date">End date (MM/yyyy)</string>
    <string name="experience_edit_what_did_you_do_hint">What did you do</string>
    <string name="experience_edit_title_hint">Title</string>
    <string name="experience_edit_company_hint">Company</string>
    <string name="education_edit_school_hint">School</string>
    <string name="education_edit_major_hint">Major</string>
    <string name="education_edit_courses_hint">Courses</string>
    <string name="project_edit_name_hint">Project name</string>
    <string name="project_edit_details_hint">Details</string>
</resources>
