<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jasonyeh.resume.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_medium"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/user_name_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/user_picture"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/caption_text_size"
                    android:text="Jason Yeh"/>

                <ImageButton
                    android:id="@+id/edit_basic_info"
                    android:layout_width="@dimen/icon_button_size"
                    android:layout_height="@dimen/icon_button_size"
                    android:layout_marginLeft="@dimen/spacing_xsmall"
                    android:src="@drawable/ic_mode_edit_black_18dp"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/edit_basic_info" />

            </LinearLayout>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/user_name_layout"
                android:layout_toLeftOf="@+id/user_picture"
                tools:text="jasonyeh@xxx.com"/>

            <ImageView
                android:id="@+id/user_picture"
                android:layout_width="@dimen/user_picture_size"
                android:layout_height="@dimen/user_picture_size"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_face_red_300_24dp"
                android:contentDescription="@string/user_picture"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/caption_text_size"
                android:layout_weight="1"
                android:text="@string/section_education"/>

            <ImageButton
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/education_school"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="SJSU (2015 ~ 2017)" />

                <ImageButton
                    android:id="@+id/edit_education_btn"
                    android:layout_width="@dimen/icon_button_size"
                    android:layout_height="@dimen/icon_button_size"
                    android:src="@drawable/ic_mode_edit_black_18dp"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/edit_education"/>

            </LinearLayout>

            <TextView
                android:id="@+id/education_courses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="- Database\n- Algorithm\n- Networking" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/caption_text_size"
                android:textAllCaps="true"
                android:text="@string/section_experience"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/add_experience_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_add_black_18dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/experience_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Mathematics Teacher (2013 ~ 2015)" />

            <ImageButton
                android:id="@+id/edit_experience_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:src="@drawable/ic_mode_edit_black_18dp"
                android:background="?attr/selectableItemBackground" />

        </LinearLayout>



    </LinearLayout>


</ScrollView>
